Edit some strings to start with uppercase letter
All translations are updated and corrected as needed.

--- a/po/ar.po
+++ b/po/ar.po
@@ -5889,7 +5889,7 @@ msgstr "نرويجى"
 msgid "Norwegian"
 msgstr "نرويجى"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "غير محددة"
 
 #
@@ -11492,7 +11492,7 @@ msgstr ""
 msgid "copy to bouquets"
 msgstr "نسخ الى الباقات"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "إنشاء دليل"
 
 #
@@ -12082,7 +12082,7 @@ msgstr ""
 msgid "remove cable services"
 msgstr ""
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "حذف الدليل"
 
 msgid "remove entry"
@@ -12319,10 +12319,10 @@ msgid "successful"
 msgstr ""
 
 #
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "الانتقال الى المرجعيات"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "الانتقال الى قائمة الملفات"
 
 msgid "switch to the next angle"
@@ -12406,7 +12406,7 @@ msgstr "حتى وضع الاستعداد/إعادة التشغيل"
 
 #
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "بحث آلـى"
 
 msgid "used"
