--- a/po/bg.po
+++ b/po/bg.po
@@ -5538,7 +5538,7 @@ msgstr "Нервегия"
 msgid "Norwegian"
 msgstr "Норвежки"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Не определен"
 
 #, fuzzy
@@ -10803,8 +10803,8 @@ msgstr "готвене"
 msgid "copy to bouquets"
 msgstr "копиране в букет"
 
-msgid "create directory"
-msgstr "създай директория"
+msgid "Create directory"
+msgstr "Създай директория"
 
 msgid "daily"
 msgstr "дневно"
@@ -11364,8 +11364,8 @@ msgstr "премахни букет от родителския контрол"
 msgid "remove cable services"
 msgstr "премахни кабелни канали"
 
-msgid "remove directory"
-msgstr "премахни директория"
+msgid "Remove directory"
+msgstr "Премахни директория"
 
 msgid "remove entry"
 msgstr "премахни"
@@ -11593,11 +11593,11 @@ msgstr "отмяна на канала като стартиращ при зар
 msgid "successful"
 msgstr "успешно"
 
-msgid "switch to bookmarks"
-msgstr "превкл. към отметки"
+msgid "Switch to bookmarks"
+msgstr "Превкл. към отметки"
 
-msgid "switch to filelist"
-msgstr "превкл. на файллист"
+msgid "Switch to filelist"
+msgstr "Превкл. на файллист"
 
 msgid "switch to the next angle"
 msgstr "превкл. на следващ ъгъл"
@@ -11675,7 +11675,7 @@ msgid "until standby/restart"
 msgstr "до режим готовност/рестарт"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Автоматично Търсене"
 
 msgid "used"
