--- a/po/cs.po
+++ b/po/cs.po
@@ -6301,7 +6301,7 @@ msgstr "Norsko"
 msgid "Norwegian"
 msgstr "Norsky"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Nedefinován"
 
 #
@@ -12278,7 +12278,7 @@ msgid "copy to bouquets"
 msgstr "Zkopírovat do přehledů"
 
 #
-msgid "create directory"
+msgid "Create directory"
 msgstr "Založit adresář"
 
 #
@@ -12934,7 +12934,7 @@ msgid "remove cable services"
 msgstr "Odstranit programy kabelové televize"
 
 #
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "Smazat adresář"
 
 #
@@ -13199,11 +13199,11 @@ msgid "successful"
 msgstr "úspěšné"
 
 #
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "Přepnout do záložek"
 
 #
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "Přepnout na seznam souborů"
 
 #
@@ -13297,7 +13297,7 @@ msgid "until standby/restart"
 msgstr "do standby/restartu"
 
 #
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Aktualizovat záložky"
 
 msgid "used"
