--- a/po/da.po
+++ b/po/da.po
@@ -6253,7 +6253,7 @@ msgstr "Norsk"
 msgid "Norwegian"
 msgstr "Norsk"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Ikke defineret"
 
 #
@@ -12238,8 +12238,8 @@ msgid "copy to bouquets"
 msgstr "kopier til favoritlister"
 
 #
-msgid "create directory"
-msgstr "opret mappe"
+msgid "Create directory"
+msgstr "Opret mappe"
 
 #
 msgid "daily"
@@ -12890,8 +12890,8 @@ msgid "remove cable services"
 msgstr "Fjern kabelservices"
 
 #
-msgid "remove directory"
-msgstr "fjern mappe"
+msgid "Remove directory"
+msgstr "Fjern mappe"
 
 #
 msgid "remove entry"
@@ -13151,12 +13151,12 @@ msgid "successful"
 msgstr "succesfuld"
 
 #
-msgid "switch to bookmarks"
-msgstr "skift til bogmærker"
+msgid "Switch to bookmarks"
+msgstr "Skift til bogmærker"
 
 #
-msgid "switch to filelist"
-msgstr "skift til filliste"
+msgid "Switch to filelist"
+msgstr "Skift til filliste"
 
 #
 msgid "switch to the next angle"
@@ -13246,7 +13246,7 @@ msgid "until standby/restart"
 msgstr "indtil standby/genstart"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Automatisk Skan"
 
 msgid "used"
