--- a/po/de.po
+++ b/po/de.po
@@ -5502,7 +5502,7 @@ msgstr "Norwegen"
 msgid "Norwegian"
 msgstr "Norwegisch"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Nicht definiert"
 
 msgid "Not Installed"
@@ -10736,7 +10736,7 @@ msgstr "Kochen"
 msgid "copy to bouquets"
 msgstr "In Bouquets kopieren"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "Verzeichnis erstellen"
 
 msgid "daily"
@@ -11291,7 +11291,7 @@ msgstr "Bouquet aus Jugendschutz entfernen"
 msgid "remove cable services"
 msgstr "Kabel-Dienste entfernen"
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "Verzeichnis entfernen"
 
 msgid "remove entry"
@@ -11520,10 +11520,10 @@ msgstr "Nicht mehr als Anschaltkanal nutzen"
 msgid "successful"
 msgstr "erfolgreich"
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "Gehe zu den Lesezeichen"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "In Dateiliste wechseln"
 
 msgid "switch to the next angle"
@@ -11601,7 +11601,7 @@ msgstr "untestbar"
 msgid "until standby/restart"
 msgstr "Bis zum Standby/Neustart"
 
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Automatische Lesezeichen"
 
 msgid "used"
