--- a/po/en.po
+++ b/po/en.po
@@ -5545,7 +5545,7 @@ msgstr "Norwegian"
 msgid "Norwegian"
 msgstr "Norwegian"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #, fuzzy
@@ -10822,8 +10822,8 @@ msgstr "cooking"
 msgid "copy to bouquets"
 msgstr "copy to bouquets"
 
-msgid "create directory"
-msgstr "create directory"
+msgid "Create directory"
+msgstr "Create directory"
 
 msgid "daily"
 msgstr "daily"
@@ -11383,8 +11383,8 @@ msgstr ""
 msgid "remove cable services"
 msgstr ""
 
-msgid "remove directory"
-msgstr "remove directory"
+msgid "Remove directory"
+msgstr "Remove directory"
 
 msgid "remove entry"
 msgstr "remove entry"
@@ -11615,11 +11615,11 @@ msgstr "stop using as startup service"
 msgid "successful"
 msgstr ""
 
-msgid "switch to bookmarks"
-msgstr "switch to bookmarks"
+msgid "Switch to bookmarks"
+msgstr "Switch to bookmarks"
 
-msgid "switch to filelist"
-msgstr "switch to filelist"
+msgid "Switch to filelist"
+msgstr "Switch to filelist"
 
 msgid "switch to the next angle"
 msgstr "switch to the next angle"
@@ -11697,9 +11697,8 @@ msgstr ""
 msgid "until standby/restart"
 msgstr "until standby/restart"
 
-#, fuzzy
-msgid "update bookmarks"
-msgstr "Automatic scan"
+msgid "Update bookmarks"
+msgstr "Update bookmarks"
 
 msgid "used"
 msgstr ""
