--- a/po/es.po
+++ b/po/es.po
@@ -6126,8 +6126,8 @@ msgstr "Noruega"
 msgid "Norwegian"
 msgstr "Noruego"
 
-msgid "Not Defined"
-msgstr "No Definido"
+msgid "Not defined"
+msgstr "No definido"
 
 #
 #, fuzzy
@@ -11953,8 +11953,8 @@ msgid "copy to bouquets"
 msgstr "copiar a listas"
 
 #
-msgid "create directory"
-msgstr "crear directorio"
+msgid "Create directory"
+msgstr "Crear directorio"
 
 #
 msgid "daily"
@@ -12599,8 +12599,8 @@ msgid "remove cable services"
 msgstr "Eliminar servicios de cable"
 
 #
-msgid "remove directory"
-msgstr "borrar directorio"
+msgid "Remove directory"
+msgstr "Borrar directorio"
 
 #
 msgid "remove entry"
@@ -12857,12 +12857,12 @@ msgid "successful"
 msgstr "exitoso"
 
 #
-msgid "switch to bookmarks"
-msgstr "pasar a marcadores"
+msgid "Switch to bookmarks"
+msgstr "Pasar a marcadores"
 
 #
-msgid "switch to filelist"
-msgstr "cambiar a lista de ficheros"
+msgid "Switch to filelist"
+msgstr "Cambiar a lista de ficheros"
 
 #
 msgid "switch to the next angle"
@@ -12950,8 +12950,8 @@ msgstr "Intachable"
 msgid "until standby/restart"
 msgstr "hasta reposo/reinicio"
 
-msgid "update bookmarks"
-msgstr "actualizar marcadores"
+msgid "Update bookmarks"
+msgstr "Actualizar marcadores"
 
 msgid "used"
 msgstr ""
