--- a/po/et.po
+++ b/po/et.po
@@ -5507,7 +5507,7 @@ msgstr "Norra"
 msgid "Norwegian"
 msgstr "Norra"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Määramata"
 
 #, fuzzy
@@ -10791,7 +10791,7 @@ msgstr "kokasaade"
 msgid "copy to bouquets"
 msgstr "kopeeri nimekirjadesse"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "Loo kataloog"
 
 msgid "daily"
@@ -11350,8 +11350,8 @@ msgstr "eemalda lemmiknimekirja lukustus"
 msgid "remove cable services"
 msgstr "kustuta kaabelTV teenused"
 
-msgid "remove directory"
-msgstr "kustuta kataloog"
+msgid "Remove directory"
+msgstr "Kustuta kataloog"
 
 msgid "remove entry"
 msgstr "kustuta kirje"
@@ -11579,11 +11579,11 @@ msgstr "ära kasuta käivituskanalina"
 msgid "successful"
 msgstr "edukas"
 
-msgid "switch to bookmarks"
-msgstr "mine lemmikute-loendisse"
+msgid "Switch to bookmarks"
+msgstr "Mine lemmikute-loendisse"
 
-msgid "switch to filelist"
-msgstr "mine faililoendisse"
+msgid "Switch to filelist"
+msgstr "Mine faililoendisse"
 
 msgid "switch to the next angle"
 msgstr "vali järgmine vaatenurk"
@@ -11661,7 +11661,7 @@ msgid "until standby/restart"
 msgstr "kuni ooterežiimini/taaskäivitamiseni"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Automaatne järjehoidjad"
 
 msgid "used"
