--- a/po/fa.po
+++ b/po/fa.po
@@ -5644,7 +5644,7 @@ msgstr "نروژی"
 msgid "Norwegian"
 msgstr "نروژی"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #, fuzzy
@@ -10911,7 +10911,7 @@ msgstr ""
 msgid "copy to bouquets"
 msgstr ""
 
-msgid "create directory"
+msgid "Create directory"
 msgstr ""
 
 msgid "daily"
@@ -11470,7 +11470,7 @@ msgstr ""
 msgid "remove cable services"
 msgstr ""
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr ""
 
 msgid "remove entry"
@@ -11699,10 +11699,10 @@ msgstr ""
 msgid "successful"
 msgstr ""
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr ""
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr ""
 
 msgid "switch to the next angle"
@@ -11781,7 +11781,7 @@ msgid "until standby/restart"
 msgstr ""
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "اسکن خودکار"
 
 msgid "used"
