--- a/po/fi.po
+++ b/po/fi.po
@@ -6112,7 +6112,7 @@ msgid "Norwegian"
 msgstr "Norja"
 
 #
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Ei määritetty"
 
 #
@@ -11976,7 +11976,7 @@ msgid "copy to bouquets"
 msgstr "kopioi suosikkilistalle"
 
 #
-msgid "create directory"
+msgid "Create directory"
 msgstr "Luo hakemisto"
 
 #
@@ -12620,7 +12620,7 @@ msgid "remove cable services"
 msgstr ""
 
 #
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "Poista hakemisto"
 
 #
@@ -12882,11 +12882,11 @@ msgid "successful"
 msgstr ""
 
 #
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "Vaihda kirjanmerkkeihin"
 
 #
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "Vaihda tiedostolistaan"
 
 #
@@ -12977,7 +12977,7 @@ msgstr ""
 msgid "until standby/restart"
 msgstr "valmiustilaan/uudelleenkäynnistykseen asti"
 
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Päivitä kirjanmerkit"
 
 msgid "used"
