--- a/po/fr.po
+++ b/po/fr.po
@@ -5491,7 +5491,7 @@ msgstr "Norvége"
 msgid "Norwegian"
 msgstr "Norvégien"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Pas défini"
 
 msgid "Not Installed"
@@ -10717,7 +10717,7 @@ msgstr "Cuisine"
 msgid "copy to bouquets"
 msgstr "Copier vers bouquets"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "Création répertoire"
 
 msgid "daily"
@@ -11272,7 +11272,7 @@ msgstr "Supprimer le bouquet de la protection parentale"
 msgid "remove cable services"
 msgstr "supprimer les services câbles"
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "Supprimer le répertoire"
 
 msgid "remove entry"
@@ -11501,10 +11501,10 @@ msgstr "Arrêter d'utiliser comme service de démarrage"
 msgid "successful"
 msgstr "réussi"
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "Basculer vers les signets"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "Basculer vers la liste des fichiers"
 
 msgid "switch to the next angle"
@@ -11582,8 +11582,8 @@ msgstr "non testable"
 msgid "until standby/restart"
 msgstr "Jusqu'à veille/redémarrage"
 
-msgid "update bookmarks"
-msgstr "mettre à jour les signets"
+msgid "Update bookmarks"
+msgstr "Mettre à jour les signets"
 
 msgid "used"
 msgstr "utilisé"
