--- a/po/fy.po
+++ b/po/fy.po
@@ -6294,7 +6294,7 @@ msgstr "Noarsk"
 msgid "Norwegian"
 msgstr "Noarsk"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #
@@ -12302,8 +12302,8 @@ msgid "copy to bouquets"
 msgstr "kopieer nei boeketten"
 
 #
-msgid "create directory"
-msgstr "map meitsje"
+msgid "Create directory"
+msgstr "Map meitsje"
 
 #
 msgid "daily"
@@ -12955,8 +12955,8 @@ msgid "remove cable services"
 msgstr ""
 
 #
-msgid "remove directory"
-msgstr "map ferwiderje"
+msgid "Remove directory"
+msgstr "Map ferwiderje"
 
 #
 msgid "remove entry"
@@ -13215,12 +13215,12 @@ msgid "successful"
 msgstr ""
 
 #
-msgid "switch to bookmarks"
-msgstr "skeakelje nei boekmerkers"
+msgid "Switch to bookmarks"
+msgstr "Skeakelje nei boekmerkers"
 
 #
-msgid "switch to filelist"
-msgstr "skeakelje nei triemlyst"
+msgid "Switch to filelist"
+msgstr "Skeakelje nei triemlyst"
 
 #
 msgid "switch to the next angle"
@@ -13312,7 +13312,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Automatysk sykjen"
 
 msgid "used"
