--- a/po/he.po
+++ b/po/he.po
@@ -5948,7 +5948,7 @@ msgstr "נורווגית"
 msgid "Norwegian"
 msgstr "נורווגית"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #
@@ -11621,7 +11621,7 @@ msgstr ""
 msgid "copy to bouquets"
 msgstr "העתק לתיקית ערוצים"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "צור תיקיה"
 
 #
@@ -12217,8 +12217,8 @@ msgstr ""
 msgid "remove cable services"
 msgstr ""
 
-msgid "remove directory"
-msgstr "remove directory"
+msgid "Remove directory"
+msgstr "Remove directory"
 
 msgid "remove entry"
 msgstr "remove entry"
@@ -12455,10 +12455,10 @@ msgid "successful"
 msgstr ""
 
 #
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "העבר לסימניות"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "העבר לרשימת הקבצים"
 
 msgid "switch to the next angle"
@@ -12543,7 +12543,7 @@ msgstr "until standby/restart"
 
 #
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "סריקה אוטומטית"
 
 msgid "used"
