--- a/po/hu.po
+++ b/po/hu.po
@@ -5489,7 +5489,7 @@ msgstr "Norvégia"
 msgid "Norwegian"
 msgstr "Norvég"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Nincs megadva"
 
 msgid "Not Installed"
@@ -10708,8 +10708,8 @@ msgstr "főzés"
 msgid "copy to bouquets"
 msgstr "másolás listába"
 
-msgid "create directory"
-msgstr "mappa létrehozása"
+msgid "Create directory"
+msgstr "Mappa létrehozása"
 
 msgid "daily"
 msgstr "naponta"
@@ -11263,8 +11263,8 @@ msgstr "lista eltávolítása a gyermekzár védelem alól"
 msgid "remove cable services"
 msgstr "kábeles szolgáltatás eltávolítása"
 
-msgid "remove directory"
-msgstr "mappa eltávolítása"
+msgid "Remove directory"
+msgstr "Mappa eltávolítása"
 
 msgid "remove entry"
 msgstr "bejegyzés törlése"
@@ -11492,11 +11492,11 @@ msgstr "beállítás indítási csatornának"
 msgid "successful"
 msgstr "sikeres"
 
-msgid "switch to bookmarks"
-msgstr "átkapcsolás a bookmarkokra"
+msgid "Switch to bookmarks"
+msgstr "Átkapcsolás a bookmarkokra"
 
-msgid "switch to filelist"
-msgstr "kapcsolás fájllistára"
+msgid "Switch to filelist"
+msgstr "Kapcsolás fájllistára"
 
 msgid "switch to the next angle"
 msgstr "váltás a következő nézőszögre"
@@ -11573,8 +11573,8 @@ msgstr "nem tesztelhető"
 msgid "until standby/restart"
 msgstr "kikapcsolásig/újraindításig"
 
-msgid "update bookmarks"
-msgstr "könyvjelzők frissítése"
+msgid "Update bookmarks"
+msgstr "Könyvjelzők frissítése"
 
 msgid "used"
 msgstr ""
