--- a/po/id.po
+++ b/po/id.po
@@ -5616,7 +5616,7 @@ msgstr "Norwegia"
 msgid "Norwegian"
 msgstr "Norwegia"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Tak ditetapkan"
 
 #, fuzzy
@@ -10946,8 +10946,8 @@ msgstr "memasak"
 msgid "copy to bouquets"
 msgstr "salin ke buket"
 
-msgid "create directory"
-msgstr "buat direktori"
+msgid "Create directory"
+msgstr "Buat direktori"
 
 msgid "daily"
 msgstr "harian"
@@ -11508,8 +11508,8 @@ msgstr "hapus buket dari proteksi orangtua"
 msgid "remove cable services"
 msgstr "hapus layanan kabel"
 
-msgid "remove directory"
-msgstr "hapus directori"
+msgid "Remove directory"
+msgstr "Hapus directori"
 
 msgid "remove entry"
 msgstr "hapus entri"
@@ -11740,11 +11740,11 @@ msgstr "berhenti gunakan sbg layanan mulai"
 msgid "successful"
 msgstr "sukses"
 
-msgid "switch to bookmarks"
-msgstr "ganti ke penandabuku"
+msgid "Switch to bookmarks"
+msgstr "Ganti ke penandabuku"
 
-msgid "switch to filelist"
-msgstr "ganti ke daftarberkas"
+msgid "Switch to filelist"
+msgstr "Ganti ke daftarberkas"
 
 msgid "switch to the next angle"
 msgstr "ganti ke sudut berikutnya"
@@ -11823,7 +11823,7 @@ msgid "until standby/restart"
 msgstr "sampai standby/mulai ulang"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Penanda buku otomatis"
 
 msgid "used"
