--- a/po/is.po
+++ b/po/is.po
@@ -6143,7 +6143,7 @@ msgstr "Norska"
 msgid "Norwegian"
 msgstr "Norska"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #
@@ -12132,8 +12132,8 @@ msgid "copy to bouquets"
 msgstr "afrita til rásavanda"
 
 #
-msgid "create directory"
-msgstr "búa til möppu"
+msgid "Create directory"
+msgstr "Búa til möppu"
 
 #
 msgid "daily"
@@ -12783,8 +12783,8 @@ msgid "remove cable services"
 msgstr ""
 
 #
-msgid "remove directory"
-msgstr "eyða möppu"
+msgid "Remove directory"
+msgstr "Eyða möppu"
 
 #
 msgid "remove entry"
@@ -13040,12 +13040,12 @@ msgid "successful"
 msgstr ""
 
 #
-msgid "switch to bookmarks"
-msgstr "fara á bókamerki"
+msgid "Switch to bookmarks"
+msgstr "Fara á bókamerki"
 
 #
-msgid "switch to filelist"
-msgstr "skipta í skráarlista"
+msgid "Switch to filelist"
+msgstr "Skipta í skráarlista"
 
 #
 msgid "switch to the next angle"
@@ -13136,7 +13136,7 @@ msgid "until standby/restart"
 msgstr "bíða til biðstöðu/endurræsingu"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Sjálfvirk leit"
 
 msgid "used"
