--- a/po/it.po
+++ b/po/it.po
@@ -5530,7 +5530,7 @@ msgstr "Norvegia"
 msgid "Norwegian"
 msgstr "Norvegese"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Non definito"
 
 #, fuzzy
@@ -10827,7 +10827,7 @@ msgstr "Cucina"
 msgid "copy to bouquets"
 msgstr "Copiare nei bouquet"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "Creare una nuova cartella"
 
 msgid "daily"
@@ -11388,7 +11388,7 @@ msgstr "Escludere il bouquet dal Controllo genitori"
 msgid "remove cable services"
 msgstr "Eliminare il canale via cavo"
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "Eliminare la cartella"
 
 msgid "remove entry"
@@ -11617,10 +11617,10 @@ msgstr "Non utilizzare più come canale di avvio"
 msgid "successful"
 msgstr "riuscito"
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "Passare ai percorsi preferiti"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "Passare all'elenco dei file"
 
 msgid "switch to the next angle"
@@ -11699,7 +11699,7 @@ msgid "until standby/restart"
 msgstr "Fino a Sospensione/Riavvio"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Segnalibri automatici"
 
 msgid "used"
