--- a/po/lt.po
+++ b/po/lt.po
@@ -5517,7 +5517,7 @@ msgstr "Norvegija"
 msgid "Norwegian"
 msgstr "Norvegų"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Neapibrėžta"
 
 #, fuzzy
@@ -10754,8 +10754,8 @@ msgstr "valgio gaminimas"
 msgid "copy to bouquets"
 msgstr "kopijuoti į paketus"
 
-msgid "create directory"
-msgstr "sukurti katalogą"
+msgid "Create directory"
+msgstr "Sukurti katalogą"
 
 msgid "daily"
 msgstr "kasdien"
@@ -11310,8 +11310,8 @@ msgstr "pašalinti paketą iš tėvų kontrolės"
 msgid "remove cable services"
 msgstr "pašalinti kabelinius kanalus"
 
-msgid "remove directory"
-msgstr "pašalinti katalogą"
+msgid "Remove directory"
+msgstr "Pašalinti katalogą"
 
 msgid "remove entry"
 msgstr "pašalinti"
@@ -11539,11 +11539,11 @@ msgstr "nustoti naudoti kaip paleisties kanalą"
 msgid "successful"
 msgstr "sėkmingai"
 
-msgid "switch to bookmarks"
-msgstr "perjungti į žymes"
+msgid "Switch to bookmarks"
+msgstr "Perjungti į žymes"
 
-msgid "switch to filelist"
-msgstr "perjungti į failų sąrašą"
+msgid "Switch to filelist"
+msgstr "Perjungti į failų sąrašą"
 
 msgid "switch to the next angle"
 msgstr "perjungti į kitą kampą"
@@ -11621,7 +11621,7 @@ msgid "until standby/restart"
 msgstr "iki budėjimo/paleidimo iš naujo"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Automatinės žymos"
 
 msgid "used"
