--- a/po/lv.po
+++ b/po/lv.po
@@ -5510,7 +5510,7 @@ msgstr "Norvēģija"
 msgid "Norwegian"
 msgstr "Norvēģu"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Nav definēts"
 
 #, fuzzy
@@ -10736,8 +10736,8 @@ msgstr "cepšana"
 msgid "copy to bouquets"
 msgstr "kopēt uz buķetēm"
 
-msgid "create directory"
-msgstr "izveidot mapi"
+msgid "Create directory"
+msgstr "Izveidot mapi"
 
 msgid "daily"
 msgstr "ik dienu"
@@ -11292,8 +11292,8 @@ msgstr "dzēst buķeti no vecāku kontroles"
 msgid "remove cable services"
 msgstr "dzēst kabeļu kanālus"
 
-msgid "remove directory"
-msgstr "dzēst mapi"
+msgid "Remove directory"
+msgstr "Dzēst mapi"
 
 msgid "remove entry"
 msgstr "dzēst ierakstu"
@@ -11521,11 +11521,11 @@ msgstr "pārtraukt lietot kā ieslēgšanas kanālu"
 msgid "successful"
 msgstr "veiksmīgi"
 
-msgid "switch to bookmarks"
-msgstr "iet uz grāmatzīmēm"
+msgid "Switch to bookmarks"
+msgstr "Iet uz grāmatzīmēm"
 
-msgid "switch to filelist"
-msgstr "pāriet uz failu sarakstu"
+msgid "Switch to filelist"
+msgstr "Pāriet uz failu sarakstu"
 
 msgid "switch to the next angle"
 msgstr "pārslēgt uz nākamo leņķi"
@@ -11602,8 +11602,8 @@ msgstr "netestēts"
 msgid "until standby/restart"
 msgstr "līdz gaidstāvei/pārstartēšanai"
 
-msgid "update bookmarks"
-msgstr "atjaunot grāmatzīmes"
+msgid "Update bookmarks"
+msgstr "Atjaunot grāmatzīmes"
 
 msgid "used"
 msgstr ""
