--- a/po/nb.po
+++ b/po/nb.po
@@ -6110,7 +6110,7 @@ msgid "Norwegian"
 msgstr "Norsk"
 
 #
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Ikke angitt"
 
 #
@@ -11899,8 +11899,8 @@ msgstr "matlaging"
 msgid "copy to bouquets"
 msgstr "kopier til kanallister"
 
-msgid "create directory"
-msgstr "opprett mappe"
+msgid "Create directory"
+msgstr "Opprett mappe"
 
 #
 msgid "daily"
@@ -12540,8 +12540,8 @@ msgstr "fjern kanallisten fra foreldrekontroll beskyttelsen"
 msgid "remove cable services"
 msgstr "fjern kabel TV kanaler"
 
-msgid "remove directory"
-msgstr "fjern mappe"
+msgid "Remove directory"
+msgstr "Fjern mappe"
 
 msgid "remove entry"
 msgstr "fjern denne kanal fra kanallisten"
@@ -12788,11 +12788,11 @@ msgstr "slutte å bruke som oppstartskanal"
 msgid "successful"
 msgstr "vellykket"
 
-msgid "switch to bookmarks"
-msgstr "gå til bokmerker"
+msgid "Switch to bookmarks"
+msgstr "Gå til bokmerker"
 
-msgid "switch to filelist"
-msgstr "gå til mappe liste"
+msgid "Switch to filelist"
+msgstr "Gå til mappe liste"
 
 msgid "switch to the next angle"
 msgstr "gå til neste posisjon"
@@ -12877,8 +12877,8 @@ msgstr "lar seg ikke teste"
 msgid "until standby/restart"
 msgstr "til slår av/starter på nytt"
 
-msgid "update bookmarks"
-msgstr "oppdatere bokmerker"
+msgid "Update bookmarks"
+msgstr "Oppdatere bokmerker"
 
 msgid "used"
 msgstr ""
