--- a/po/nl.po
+++ b/po/nl.po
@@ -5693,7 +5693,7 @@ msgstr "Noorwegen"
 msgid "Norwegian"
 msgstr "Noors"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Niet vestgelegd"
 
 msgid "Not Installed"
@@ -11020,7 +11020,7 @@ msgstr "Kookprogramma"
 msgid "copy to bouquets"
 msgstr "Kopieer naar bouquetten"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "Map aanmaken"
 
 msgid "daily"
@@ -11575,7 +11575,7 @@ msgstr "verwijder bouquet uit het kinderslot"
 msgid "remove cable services"
 msgstr "verwijder kabelkanalen"
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "Map verwijderen"
 
 msgid "remove entry"
@@ -11805,10 +11805,10 @@ msgstr "stop met het gebruiken als opstartzender"
 msgid "successful"
 msgstr "gelukt"
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "Ga naar markeerpunten"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "Ga naar bestandenlijst"
 
 msgid "switch to the next angle"
@@ -11886,8 +11886,8 @@ msgstr "niet te testen"
 msgid "until standby/restart"
 msgstr "tot standby/herstart"
 
-msgid "update bookmarks"
-msgstr "actualiseer de bladwijzers"
+msgid "Update bookmarks"
+msgstr "Actualiseer de bladwijzers"
 
 msgid "used"
 msgstr "gebruikte"
