--- a/po/nn.po
+++ b/po/nn.po
@@ -6079,7 +6079,7 @@ msgstr "Norsk"
 msgid "Norwegian"
 msgstr "Norsk"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #
@@ -11808,8 +11808,8 @@ msgstr "matlaging"
 msgid "copy to bouquets"
 msgstr "kopiere til kanallister"
 
-msgid "create directory"
-msgstr "opprette katalog"
+msgid "Create directory"
+msgstr "Opprette katalog"
 
 #
 msgid "daily"
@@ -12449,8 +12449,8 @@ msgstr ""
 msgid "remove cable services"
 msgstr ""
 
-msgid "remove directory"
-msgstr "slette katalog"
+msgid "Remove directory"
+msgstr "Slette katalog"
 
 msgid "remove entry"
 msgstr "fjerne denne"
@@ -12699,11 +12699,11 @@ msgstr "slutt og bruke som oppstarttjeneste"
 msgid "successful"
 msgstr ""
 
-msgid "switch to bookmarks"
-msgstr "gå til bokmerker"
+msgid "Switch to bookmarks"
+msgstr "Gå til bokmerker"
 
-msgid "switch to filelist"
-msgstr "gå til filliste"
+msgid "Switch to filelist"
+msgstr "Gå til filliste"
 
 msgid "switch to the next angle"
 msgstr "gå til neste posisjon"
@@ -12787,7 +12787,7 @@ msgid "until standby/restart"
 msgstr "til slår av/starter på nytt"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Automatisk søk"
 
 msgid "used"
