--- a/po/pl.po
+++ b/po/pl.po
@@ -5507,7 +5507,7 @@ msgstr "Norwegia"
 msgid "Norwegian"
 msgstr "Norweski"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Niezdefiniowany"
 
 msgid "Not Installed"
@@ -10727,7 +10727,7 @@ msgstr "Gotowanie"
 msgid "copy to bouquets"
 msgstr "Kopiuj do bukietów"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "Utwórz katalog"
 
 msgid "daily"
@@ -11282,7 +11282,7 @@ msgstr "Usuń bukiet z kontroli rodzicielskiej"
 msgid "remove cable services"
 msgstr "Usuń kanały tv kablowej"
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "Usuń katalog"
 
 msgid "remove entry"
@@ -11511,10 +11511,10 @@ msgstr "Przestań używać jako kanał startowy"
 msgid "successful"
 msgstr "udane"
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "Przejdź do zakładek"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "Przjdź do listy plików"
 
 msgid "switch to the next angle"
@@ -11592,7 +11592,7 @@ msgstr "nietestowalne"
 msgid "until standby/restart"
 msgstr "Do standby/restartu"
 
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Aktualizuj zakładki"
 
 msgid "used"
