--- a/po/pt.po
+++ b/po/pt.po
@@ -6350,7 +6350,7 @@ msgstr "Norueguês"
 msgid "Norwegian"
 msgstr "Norueguês"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #
@@ -12472,8 +12472,8 @@ msgid "copy to bouquets"
 msgstr "copiar para bouquets"
 
 #
-msgid "create directory"
-msgstr "criar directório"
+msgid "Create directory"
+msgstr "Criar directório"
 
 #
 msgid "daily"
@@ -13127,8 +13127,8 @@ msgid "remove cable services"
 msgstr ""
 
 #
-msgid "remove directory"
-msgstr "apagar directório"
+msgid "Remove directory"
+msgstr "Apagar directório"
 
 #
 msgid "remove entry"
@@ -13390,12 +13390,12 @@ msgid "successful"
 msgstr ""
 
 #
-msgid "switch to bookmarks"
-msgstr "mudar para favoritos"
+msgid "Switch to bookmarks"
+msgstr "Mudar para favoritos"
 
 #
-msgid "switch to filelist"
-msgstr "mudar para Lista de Ficheiros"
+msgid "Switch to filelist"
+msgstr "Mudar para Lista de Ficheiros"
 
 #
 msgid "switch to the next angle"
@@ -13486,7 +13486,7 @@ msgstr "até Standby/reiniciar"
 
 #
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Pesquisa automática"
 
 msgid "used"
