--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5542,7 +5542,7 @@ msgstr "Norueguês"
 msgid "Norwegian"
 msgstr "Norueguês"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #, fuzzy
@@ -10818,7 +10818,7 @@ msgstr "Cozinha"
 msgid "copy to bouquets"
 msgstr "Copiar para grupo de favoritos"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "Criar diretório"
 
 msgid "daily"
@@ -11380,7 +11380,7 @@ msgstr ""
 msgid "remove cable services"
 msgstr ""
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "Remover diretório"
 
 msgid "remove entry"
@@ -11612,10 +11612,10 @@ msgstr "Não usar como canal inicial"
 msgid "successful"
 msgstr ""
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "Ir para favoritos"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "Ir para lista de arquivos"
 
 msgid "switch to the next angle"
@@ -11695,7 +11695,7 @@ msgid "until standby/restart"
 msgstr "até standby/reiniciar"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Busca automática"
 
 msgid "used"
