--- a/po/ro.po
+++ b/po/ro.po
@@ -5644,7 +5644,7 @@ msgstr "Norvegiana"
 msgid "Norwegian"
 msgstr "Norvegiana"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #, fuzzy
@@ -10992,8 +10992,8 @@ msgstr ""
 msgid "copy to bouquets"
 msgstr "copiaza in bouquete"
 
-msgid "create directory"
-msgstr "creaza director"
+msgid "Create directory"
+msgstr "Creaza director"
 
 msgid "daily"
 msgstr "zilnic"
@@ -11554,8 +11554,8 @@ msgstr ""
 msgid "remove cable services"
 msgstr ""
 
-msgid "remove directory"
-msgstr "elimina directorul"
+msgid "Remove directory"
+msgstr "Elimina directorul"
 
 msgid "remove entry"
 msgstr "elimina intrarea"
@@ -11784,11 +11784,11 @@ msgstr ""
 msgid "successful"
 msgstr ""
 
-msgid "switch to bookmarks"
-msgstr "mergi la bookmarks"
+msgid "Switch to bookmarks"
+msgstr "Mergi la bookmarks"
 
-msgid "switch to filelist"
-msgstr "mergi la filelist"
+msgid "Switch to filelist"
+msgstr "Mergi la filelist"
 
 msgid "switch to the next angle"
 msgstr "mergi la urmatorul unghi"
@@ -11867,7 +11867,7 @@ msgid "until standby/restart"
 msgstr ""
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Scanare automata"
 
 msgid "used"
