--- a/po/sk.po
+++ b/po/sk.po
@@ -5518,7 +5518,7 @@ msgstr "Nórsko"
 msgid "Norwegian"
 msgstr "Nórčina"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Nedefinované"
 
 msgid "Not Installed"
@@ -10736,8 +10736,8 @@ msgstr "varenie"
 msgid "copy to bouquets"
 msgstr "skopírovať do prehľadov"
 
-msgid "create directory"
-msgstr "vytvoriť adresár"
+msgid "Create directory"
+msgstr "Vytvoriť adresár"
 
 msgid "daily"
 msgstr "denne"
@@ -11291,8 +11291,8 @@ msgstr "odobrať zoznam staníc z rodičovskej kontroly"
 msgid "remove cable services"
 msgstr "odtrániť stanice káblovej TV"
 
-msgid "remove directory"
-msgstr "odstrániť adresár"
+msgid "Remove directory"
+msgstr "Odstrániť adresár"
 
 msgid "remove entry"
 msgstr "odstrániť položku"
@@ -11520,11 +11520,11 @@ msgstr "nepoužívať ako stanicu po spustení"
 msgid "successful"
 msgstr "úspešný"
 
-msgid "switch to bookmarks"
-msgstr "prepnúť na záložky"
+msgid "Switch to bookmarks"
+msgstr "Prepnúť na záložky"
 
-msgid "switch to filelist"
-msgstr "prepnúť na zoznam súborov"
+msgid "Switch to filelist"
+msgstr "Prepnúť na zoznam súborov"
 
 msgid "switch to the next angle"
 msgstr "prepnúť na nasledujúci uhol kamery"
@@ -11601,8 +11601,8 @@ msgstr "neskúšateľné"
 msgid "until standby/restart"
 msgstr "do vypnutia alebo reštartu"
 
-msgid "update bookmarks"
-msgstr "aktualizovať záložky"
+msgid "Update bookmarks"
+msgstr "Aktualizovať záložky"
 
 msgid "used"
 msgstr ""
