--- a/po/sl.po
+++ b/po/sl.po
@@ -6348,7 +6348,7 @@ msgstr "Norveško"
 msgid "Norwegian"
 msgstr "Norveško"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #
@@ -12399,7 +12399,7 @@ msgid "copy to bouquets"
 msgstr "Prenos v seznam priljubljenih paketov"
 
 #
-msgid "create directory"
+msgid "Create directory"
 msgstr "Ustvarite novo mapo"
 
 #
@@ -13056,8 +13056,8 @@ msgid "remove cable services"
 msgstr "odstrani kabelske kanale"
 
 #
-msgid "remove directory"
-msgstr "odstranitev mape"
+msgid "Remove directory"
+msgstr "Odstranitev mape"
 
 #
 msgid "remove entry"
@@ -13320,12 +13320,12 @@ msgid "successful"
 msgstr ""
 
 #
-msgid "switch to bookmarks"
-msgstr "preklop na zaznamke"
+msgid "Switch to bookmarks"
+msgstr "Preklop na zaznamke"
 
 #
-msgid "switch to filelist"
-msgstr "preklop na seznam datotek"
+msgid "Switch to filelist"
+msgstr "Preklop na seznam datotek"
 
 #
 msgid "switch to the next angle"
@@ -13415,7 +13415,7 @@ msgid "until standby/restart"
 msgstr "do stanja pripravljenosti/resetiranja"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Samodejno iskanje "
 
 msgid "used"
