--- a/po/sr.po
+++ b/po/sr.po
@@ -6395,7 +6395,7 @@ msgstr "Norveški"
 msgid "Norwegian"
 msgstr "Norveški"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #
@@ -12473,7 +12473,7 @@ msgid "copy to bouquets"
 msgstr "kopiraj u bukete"
 
 #
-msgid "create directory"
+msgid "Create directory"
 msgstr "Kreiraj direktorijum"
 
 #
@@ -13128,7 +13128,7 @@ msgid "remove cable services"
 msgstr ""
 
 #
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "Uklonite direktorijum"
 
 #
@@ -13387,12 +13387,12 @@ msgid "successful"
 msgstr ""
 
 #
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "Prebaci na oznake"
 
 #
-msgid "switch to filelist"
-msgstr "prebaci u listu datoteka"
+msgid "Switch to filelist"
+msgstr "Prebaci u listu datoteka"
 
 #
 msgid "switch to the next angle"
@@ -13485,7 +13485,7 @@ msgstr "do spreman/restart"
 
 #
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Automatsko skeniranje "
 
 msgid "used"
