--- a/po/sv.po
+++ b/po/sv.po
@@ -6224,7 +6224,7 @@ msgstr "Norska"
 msgid "Norwegian"
 msgstr "Norska"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Inte definerad"
 
 #
@@ -12213,8 +12213,8 @@ msgid "copy to bouquets"
 msgstr "kopiera till favoritlista"
 
 #
-msgid "create directory"
-msgstr "skapa bibliotek"
+msgid "Create directory"
+msgstr "Skapa bibliotek"
 
 #
 msgid "daily"
@@ -12865,8 +12865,8 @@ msgid "remove cable services"
 msgstr "ta bort kabel-tv kanaler"
 
 #
-msgid "remove directory"
-msgstr "ta bort bibliotek"
+msgid "Remove directory"
+msgstr "Ta bort bibliotek"
 
 #
 msgid "remove entry"
@@ -13125,12 +13125,12 @@ msgid "successful"
 msgstr "lyckad"
 
 #
-msgid "switch to bookmarks"
-msgstr "byt till bokmärke"
+msgid "Switch to bookmarks"
+msgstr "Byt till bokmärke"
 
 #
-msgid "switch to filelist"
-msgstr "byt till fillista"
+msgid "Switch to filelist"
+msgstr "Byt till fillista"
 
 #
 msgid "switch to the next angle"
@@ -13221,7 +13221,7 @@ msgid "until standby/restart"
 msgstr "tills viloläge / omstart"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Automatisk Sökning"
 
 msgid "used"
