--- a/po/th.po
+++ b/po/th.po
@@ -5670,7 +5670,7 @@ msgstr "ภาษานอร์เว"
 msgid "Norwegian"
 msgstr "ภาษานอร์เว"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #, fuzzy
@@ -11045,7 +11045,7 @@ msgstr ""
 msgid "copy to bouquets"
 msgstr "คัดลอกเข้าสู่กลุ่มรายการ"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "สร้างโฟล์เดอร์"
 
 msgid "daily"
@@ -11609,7 +11609,7 @@ msgstr ""
 msgid "remove cable services"
 msgstr ""
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "ลบโฟล์เดอร์ออก"
 
 msgid "remove entry"
@@ -11839,10 +11839,10 @@ msgstr ""
 msgid "successful"
 msgstr ""
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "เข้าสู่บุ๊คมาร์ค"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "เข้าสู่สารบัญไฟล์"
 
 msgid "switch to the next angle"
@@ -11922,7 +11922,7 @@ msgid "until standby/restart"
 msgstr ""
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "ค้นหาอัตโนมัติ"
 
 msgid "used"
