--- a/po/tr.po
+++ b/po/tr.po
@@ -5568,7 +5568,7 @@ msgstr "Norveççe"
 msgid "Norwegian"
 msgstr "Norveççe"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Tanımlanmamış"
 
 #, fuzzy
@@ -10873,7 +10873,7 @@ msgstr "Yemek"
 msgid "copy to bouquets"
 msgstr "Buketlere Kopyala"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "Klasör Oluştur"
 
 msgid "daily"
@@ -11435,7 +11435,7 @@ msgstr "Aile korumasından çıkar"
 msgid "remove cable services"
 msgstr "Kablo servisleri sil"
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "Klasörü sil"
 
 msgid "remove entry"
@@ -11667,10 +11667,10 @@ msgstr "Başlangıç servislerini durdurun"
 msgid "successful"
 msgstr ""
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "İşaretçileri atla"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "Dosya listesine geç"
 
 msgid "switch to the next angle"
@@ -11750,7 +11750,7 @@ msgid "until standby/restart"
 msgstr "H.Bekle/Y.Başlatana Kadar"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Otomatik Tarama"
 
 msgid "used"
