--- a/po/uk.po
+++ b/po/uk.po
@@ -5613,7 +5613,7 @@ msgstr "Норвезька"
 msgid "Norwegian"
 msgstr "Норвезька"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Не визначений"
 
 #, fuzzy
@@ -10990,8 +10990,8 @@ msgstr "приготування"
 msgid "copy to bouquets"
 msgstr "копіювати в пакет"
 
-msgid "create directory"
-msgstr "створити каталог"
+msgid "Create directory"
+msgstr "Створити каталог"
 
 msgid "daily"
 msgstr "щодня"
@@ -11552,8 +11552,8 @@ msgstr "видалити букет з батьківського контрол
 msgid "remove cable services"
 msgstr "видалити кабельні послуги"
 
-msgid "remove directory"
-msgstr "видалити каталог"
+msgid "Remove directory"
+msgstr "Видалити каталог"
 
 msgid "remove entry"
 msgstr "видалити обране"
@@ -11784,11 +11784,11 @@ msgstr "відключити від автостарту сервіс"
 msgid "successful"
 msgstr "успішний"
 
-msgid "switch to bookmarks"
-msgstr "перейти на закладки"
+msgid "Switch to bookmarks"
+msgstr "Перейти на закладки"
 
-msgid "switch to filelist"
-msgstr "переключити на список файлів"
+msgid "Switch to filelist"
+msgstr "Переключити на список файлів"
 
 msgid "switch to the next angle"
 msgstr "перейти в наступній кут"
@@ -11867,7 +11867,7 @@ msgid "until standby/restart"
 msgstr "до режиму очікування/перезавантаження"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Автоматичне Сканування"
 
 msgid "used"
