--- a/po/vi.po
+++ b/po/vi.po
@@ -5492,7 +5492,7 @@ msgstr "Na Uy"
 msgid "Norwegian"
 msgstr "Na Uy"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Không xác định"
 
 msgid "Not Installed"
@@ -10704,8 +10704,8 @@ msgstr "nấu ăn"
 msgid "copy to bouquets"
 msgstr "sao chép vào gói kênh"
 
-msgid "create directory"
-msgstr "tạo thư mục"
+msgid "Create directory"
+msgstr "Tạo thư mục"
 
 msgid "daily"
 msgstr "hằng ngày"
@@ -11259,8 +11259,8 @@ msgstr "loại bỏ bó hoa khỏi sự bảo vệ của cha mẹ"
 msgid "remove cable services"
 msgstr "loại bỏ dịch vụ cáp"
 
-msgid "remove directory"
-msgstr "xóa thư mục"
+msgid "Remove directory"
+msgstr "Xóa thư mục"
 
 msgid "remove entry"
 msgstr "xoá mục nhập"
@@ -11488,11 +11488,11 @@ msgstr "ngừng sử dụng làm dịch vụ khởi động"
 msgid "successful"
 msgstr "thành công"
 
-msgid "switch to bookmarks"
-msgstr "chuyển sang đánh dấu"
+msgid "Switch to bookmarks"
+msgstr "Chuyển sang đánh dấu"
 
-msgid "switch to filelist"
-msgstr "chuyển sang filelist"
+msgid "Switch to filelist"
+msgstr "Chuyển sang filelist"
 
 msgid "switch to the next angle"
 msgstr "chuyển sang góc tiếp theo"
@@ -11569,8 +11569,8 @@ msgstr "không thể kiểm chứng"
 msgid "until standby/restart"
 msgstr "cho đến khi chờ / khởi động lại"
 
-msgid "update bookmarks"
-msgstr "cập nhật dấu trang"
+msgid "Update bookmarks"
+msgstr "Cập nhật dấu trang"
 
 msgid "used"
 msgstr ""
