--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -5500,7 +5500,7 @@ msgstr "挪威语"
 msgid "Norwegian"
 msgstr "挪威语"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #, fuzzy
@@ -10687,7 +10687,7 @@ msgstr ""
 msgid "copy to bouquets"
 msgstr "复制到自定义组"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "创建目录"
 
 msgid "daily"
@@ -11250,7 +11250,7 @@ msgstr ""
 msgid "remove cable services"
 msgstr ""
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "移除目录"
 
 msgid "remove entry"
@@ -11482,10 +11482,10 @@ msgstr "停止用作启动频道"
 msgid "successful"
 msgstr ""
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "切换到书签"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "切换到文件列表"
 
 msgid "switch to the next angle"
@@ -11564,7 +11564,7 @@ msgid "until standby/restart"
 msgstr "直到待机/重启"
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "自动扫描"
 
 msgid "used"
