--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -5497,7 +5497,7 @@ msgstr "挪威語"
 msgid "Norwegian"
 msgstr "挪威語"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #, fuzzy
@@ -10691,7 +10691,7 @@ msgstr ""
 msgid "copy to bouquets"
 msgstr "複製到自定義組"
 
-msgid "create directory"
+msgid "Create directory"
 msgstr "創建目錄"
 
 msgid "daily"
@@ -11254,7 +11254,7 @@ msgstr ""
 msgid "remove cable services"
 msgstr ""
 
-msgid "remove directory"
+msgid "Remove directory"
 msgstr "移除目錄"
 
 msgid "remove entry"
@@ -11486,10 +11486,10 @@ msgstr ""
 msgid "successful"
 msgstr ""
 
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr "切換到書簽"
 
-msgid "switch to filelist"
+msgid "Switch to filelist"
 msgstr "切換到檔列表"
 
 msgid "switch to the next angle"
@@ -11568,7 +11568,7 @@ msgid "until standby/restart"
 msgstr ""
 
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "自動掃描"
 
 msgid "used"
