--- a/po/ca.po
+++ b/po/ca.po
@@ -6187,7 +6187,7 @@ msgstr "Noruec"
 msgid "Norwegian"
 msgstr "Noruec"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr ""
 
 #
@@ -12054,7 +12054,7 @@ msgid "copy to bouquets"
 msgstr "copiar a les llistes"
 
 #
-msgid "create directory"
+msgid "Create directory"
 msgstr ""
 
 #
@@ -12702,7 +12702,7 @@ msgid "remove cable services"
 msgstr ""
 
 #
-msgid "remove directory"
+msgid "Remove directory"
 msgstr ""
 
 #
@@ -12962,12 +12962,12 @@ msgid "successful"
 msgstr ""
 
 #
-msgid "switch to bookmarks"
+msgid "Switch to bookmarks"
 msgstr ""
 
 #
-msgid "switch to filelist"
-msgstr "canviar a la llista de fitxers"
+msgid "Switch to filelist"
+msgstr "Canviar a la llista de fitxers"
 
 #
 msgid "switch to the next angle"
@@ -13059,7 +13059,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "update bookmarks"
+msgid "Update bookmarks"
 msgstr "Recerca automàtica"
 
 msgid "used"
