--- a/po/hr.po
+++ b/po/hr.po
@@ -5507,7 +5507,7 @@ msgstr "Norveška"
 msgid "Norwegian"
 msgstr "Norveški"
 
-msgid "Not Defined"
+msgid "Not defined"
 msgstr "Nije definirano"
 
 msgid "Not Installed"
@@ -10723,8 +10723,8 @@ msgstr "kuhanje"
 msgid "copy to bouquets"
 msgstr "kopiraj u pakete"
 
-msgid "create directory"
-msgstr "kreiraj direktorij"
+msgid "Create directory"
+msgstr "Kreiraj direktorij"
 
 msgid "daily"
 msgstr "dnevno"
@@ -11278,8 +11278,8 @@ msgstr "izbrišite paket iz roditeljske zaštite"
 msgid "remove cable services"
 msgstr "izbrišite kabelske usluge"
 
-msgid "remove directory"
-msgstr "izbrišite direktorij"
+msgid "Remove directory"
+msgstr "Izbrišite direktorij"
 
 msgid "remove entry"
 msgstr "brisanje unosa"
@@ -11507,11 +11507,11 @@ msgstr "prestati koristiti kao startup kanal"
 msgid "successful"
 msgstr "uspješno"
 
-msgid "switch to bookmarks"
-msgstr "prebacite se na oznake"
+msgid "Switch to bookmarks"
+msgstr "Prebacite se na oznake"
 
-msgid "switch to filelist"
-msgstr "prebacite se na popis datoteka"
+msgid "Switch to filelist"
+msgstr "Prebacite se na popis datoteka"
 
 msgid "switch to the next angle"
 msgstr "prebacite na sljedeći kut"
@@ -11588,8 +11588,8 @@ msgstr "nestabilan"
 msgid "until standby/restart"
 msgstr "do stanja čekanja/ponovnog pokretanja"
 
-msgid "update bookmarks"
-msgstr "ažurirati oznake"
+msgid "Update bookmarks"
+msgstr "Ažurirati oznake"
 
 msgid "used"
 msgstr "korišten"
